# Applied-MLOps

./: .gitignore  .pre-commit-config.yaml  HW1_Regression_with_inference_hw.ipynb  README.md  TODO.md  data.dvc  infer.py  medians.csv  preprocessing.py  pyproject.toml  ridge.skops  train.py
.dvc/: config
configs/: config.yaml
hw1/: pyproject.toml
main_model/: ridge.skops
preprocessing_models/: encoder_for_categorical.skops  median_imputer.skops  normalizer_for_nums.skops
scripts/: infer.py  preprocessing.py  train.py
