[tool.poetry]
name = "ml_hw_1"
version = "0.1.0"
description = "Applied MLOps project with train and infer"
authors = ["audioidiom <audioidiom@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
skops = "^0.9.0"
dvc-gdrive = "^3.0.0"
hydra-core = "^1.3.2"
mlflow = "^2.9.2"
gitpython = "^3.1.40"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
dvc = "^3.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2

[flake8]
max-line-length = 79
